<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acceptance_level" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/text_qualified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/qualified" />

            <Button
                android:id="@+id/text_not_involve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/not_involve" />

            <Button
                android:id="@+id/text_rectification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/rectification" />

        </LinearLayout>

        <com.weqia.wq.component.view.picture.PictureGridView
            android:id="@+id/picture_grid_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/text_sample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/sample" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:maxLines="1"
                android:padding="8dp"
                android:visibility="invisible"/>

            <ImageButton
                android:id="@+id/text_take_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:maxLines="1"
                android:padding="8dp"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>